prepare dataset working

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -4,8 +4,118 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Detecção de Mudança\n",
+    "# Detecção de Mudança"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Definições Globais\n",
     "\n",
+    "- **IS_LOCAL**: **True** - rodando programa localmente - sem acesso a GPU. **False** - rodando no Google Colab com acesso a GPU;\n",
+    "- **IS_COLAB**: **True** - utiliza o Google Colab\n",
+    "\n",
+    "Alterações são necessárias na estrutura do código ao utilizar o [Google Colab](https://colab.research.google.com/). O Dataset estará no Drive. \n",
+    "\n",
+    "- ATENÇÃO: **TODO**: aprender a salvar arquivos no Google Drive quando a aplicação estiver utilizando o Google Colab."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- DATASET_PATH:\n",
+    "- IS_PROTOTYPE:\n",
+    "- BATCH_SIZE: \n",
+    "- PATCH_SIDE:\n",
+    "- N_EPOCHS:\n",
+    "- NORMALISE_IMGS:\n",
+    "- TRAIN_STRIDE:\n",
+    "- BAND_TYPE:\n",
+    "- LOAD_TRAINED:\n",
+    "- DATA_AUG:\n",
+    "- IS_LOCAL: **True** - rodando programa localmente - sem acesso a GPU. **False** - rodando no Google Colab com acesso a GPU;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Global definitions - Ok\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Global variables definition\n",
+    "\n",
+    "# IS_PROTOTYPE = False\n",
+    "\n",
+    "BATCH_SIZE = 32\n",
+    "PATCH_SIDE = 96\n",
+    "# N_EPOCHS = 50\n",
+    "N_EPOCHS = 5 # hard to use large number of epochs even in colab\n",
+    "\n",
+    "# NORMALISE_IMGS = True\n",
+    "\n",
+    "TRAIN_STRIDE = int(PATCH_SIDE/2) - 1 # 47\n",
+    "\n",
+    "# ??\n",
+    "BAND_TYPE = 4 # 0-RGB | 1-RGBIr | 2-All bands s.t. resulution <= 20m | 3-All bands\n",
+    "\n",
+    "# LOAD_TRAINED = False\n",
+    "\n",
+    "DATA_AUGMENTATION = True\n",
+    "\n",
+    "FP_MODIFIER = 10 # tunning parameter, use 1 if unsure\n",
+    "\n",
+    "DATASET_LOCAL_PATH = '/home/virginia/Github/change-detection/onera-oscd/OSCD/'\n",
+    "DATASET_COLAB_PATH = '/content/dataset/MyDrive/OSCD/'\n",
+    "\n",
+    "if IS_COLAB:\n",
+    "    DATASET_PATH = DATASET_COLAB_PATH\n",
+    "else:\n",
+    "    DATASET_PATH = DATASET_LOCAL_PATH\n",
+    "\n",
+    "print(\"Global definitions - Ok\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Google Colab setup - Ok\n"
+     ]
+    }
+   ],
+   "source": [
+    "# initial definitions/imports for Google Colab\n",
+    "\n",
+    "IS_LOCAL = True\n",
+    "IS_COLAB = False\n",
+    "\n",
+    "if IS_COLAB:\n",
+    "    print(\"Using Google Colab...\")\n",
+    "    from google.colab import drive\n",
+    "    drive.mount('/content/dataset')\n",
+    "    \n",
+    "print(\"Google Colab setup - Ok\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Bibliotecas\n",
     "\n",
     "### Pytorch\n",
@@ -48,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -162,111 +272,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Definições Globais\n",
-    "\n",
-    "- **IS_LOCAL**: **True** - rodando programa localmente - sem acesso a GPU. **False** - rodando no Google Colab com acesso a GPU;\n",
-    "- **IS_COLAB**: **True** - utiliza o Google Colab\n",
-    "\n",
-    "Alterações são necessárias na estrutura do código ao utilizar o [Google Colab](https://colab.research.google.com/). O Dataset estará no Drive. \n",
-    "\n",
-    "- ATENÇÃO: **TODO**: aprender a salvar arquivos no Google Drive quando a aplicação estiver utilizando o Google Colab."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Google Colab setup - Ok\n"
-     ]
-    }
-   ],
-   "source": [
-    "# initial definitions/imports for Google Colab\n",
-    "\n",
-    "IS_LOCAL = True\n",
-    "IS_COLAB = False\n",
-    "\n",
-    "if IS_COLAB:\n",
-    "    print(\"Using Google Colab...\")\n",
-    "    from google.colab import drive\n",
-    "    drive.mount('/content/dataset')\n",
-    "    \n",
-    "print(\"Google Colab setup - Ok\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- DATASET_PATH:\n",
-    "- IS_PROTOTYPE:\n",
-    "- BATCH_SIZE: \n",
-    "- PATCH_SIDE:\n",
-    "- N_EPOCHS:\n",
-    "- NORMALISE_IMGS:\n",
-    "- TRAIN_STRIDE:\n",
-    "- BAND_TYPE:\n",
-    "- LOAD_TRAINED:\n",
-    "- DATA_AUG:\n",
-    "- IS_LOCAL: **True** - rodando programa localmente - sem acesso a GPU. **False** - rodando no Google Colab com acesso a GPU;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Global definitions - Ok\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Global variables definition\n",
-    "\n",
-    "# IS_PROTOTYPE = False\n",
-    "\n",
-    "BATCH_SIZE = 32\n",
-    "PATCH_SIDE = 96\n",
-    "# N_EPOCHS = 50\n",
-    "N_EPOCHS = 5 # hard to use large number of epochs even in colab\n",
-    "\n",
-    "# NORMALISE_IMGS = True\n",
-    "\n",
-    "TRAIN_STRIDE = int(PATCH_SIDE/2) - 1 # 47\n",
-    "\n",
-    "# ??\n",
-    "BAND_TYPE = 4 # 0-RGB | 1-RGBIr | 2-All bands s.t. resulution <= 20m | 3-All bands\n",
-    "\n",
-    "# LOAD_TRAINED = False\n",
-    "\n",
-    "DATA_AUGMENTATION = True\n",
-    "\n",
-    "FP_MODIFIER = 10 # tunning parameter, use 1 if unsure\n",
-    "\n",
-    "DATASET_LOCAL_PATH = '/home/virginia/Github/change-detection/onera-oscd/OSCD/'\n",
-    "DATASET_COLAB_PATH = '/content/dataset/MyDrive/OSCD/'\n",
-    "\n",
-    "if IS_COLAB:\n",
-    "    DATASET_PATH = DATASET_COLAB_PATH\n",
-    "else:\n",
-    "    DATASET_PATH = DATASET_LOCAL_PATH\n",
-    "\n",
-    "print(\"Global definitions - Ok\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Data Augmentation\n",
     "\n",
     "Recentes avanços na aquisição e processamento de imagens digitais permitiram o uso eficiente e inovador de dados fornecidos por meio de bases de dados em aplicações de inteligência artificial e redes neurais (ML, DL). Entretanto, ainda existe uma deficiência na obtenção dessa base de dados, pois determinadas técnicas computacionais necessitam de um grande volume de dados para fornecer soluções confiáveis e com capacidade de generalizar diferentes entradas. É nesse contexto que se inserem as técnicas de *Data Augmentation* em imagens.\n",
@@ -325,28 +330,235 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/14 [00:00<?, ?it/s]\n"
+      "  7%|▋         | 1/14 [00:01<00:18,  1.39s/it]"
      ]
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'adjust_shape' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-88-01790db60712>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtrain_dataset\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mChangeDetectionDataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDATASET_PATH\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstride\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mTRAIN_STRIDE\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtransform\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdata_aug_transform\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mIS_COLAB\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;31m# don't forget to activate GPU in Google Colab\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mweights\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mFloatTensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_dataset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mweights\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcuda\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-87-9d96080e801d>\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, path, train, patch_side, stride, use_all_bands, transform)\u001b[0m\n\u001b[1;32m     40\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mimg_name\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtqdm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnames\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;31m# tqdm derives from the Arabic word taqaddum (تقدّم) which can mean \"progress,\" and is an abbreviation for \"I love you so much\" in Spanish (te quiero demasiado).\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     41\u001b[0m             \u001b[0;31m# load and store each image\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 42\u001b[0;31m             \u001b[0mI1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mI2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcm\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mread_sentinel_img_trio\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mimg_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     43\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimgs_1\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mimg_name\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mreshape_torch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mI1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimgs_2\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mimg_name\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mreshape_torch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mI2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-87-e6b6707b66b3>\u001b[0m in \u001b[0;36mread_sentinel_img_trio\u001b[0;34m(path)\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0;31m# TO-DO: test with read_sentinel_img\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0;31m# BAND_TYPE is defined globally\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m     \u001b[0mI1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mread_sentinel_img\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mIMG_1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m     \u001b[0mI2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mread_sentinel_img\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mIMG_2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-87-bae140d17eb6>\u001b[0m in \u001b[0;36mread_sentinel_img\u001b[0;34m(path)\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mBAND_TYPE\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 33\u001b[0;31m         \u001b[0muv\u001b[0m  \u001b[0;34m=\u001b[0m \u001b[0madjust_shape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mzoom\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mio\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mim_name\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mSENTINEL_AEROSOL_60m\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m6\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     34\u001b[0m         \u001b[0mwv\u001b[0m  \u001b[0;34m=\u001b[0m \u001b[0madjust_shape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mzoom\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mio\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mim_name\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mSENTINEL_WATER_VAPOR_60m\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m6\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m         \u001b[0mcir\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0madjust_shape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mzoom\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mio\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mim_name\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mSENTINEL_CIRRUS_60m\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m6\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'adjust_shape' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "read_sentinel_img_trio()\n",
+      "reshape_torch()\n",
+      "reshape_torch()\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 14%|█▍        | 2/14 [00:02<00:16,  1.35s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "read_sentinel_img_trio()\n",
+      "reshape_torch()\n",
+      "reshape_torch()\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 21%|██▏       | 3/14 [00:03<00:14,  1.32s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "read_sentinel_img_trio()\n",
+      "reshape_torch()\n",
+      "reshape_torch()\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 29%|██▊       | 4/14 [00:06<00:16,  1.69s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "read_sentinel_img_trio()\n",
+      "reshape_torch()\n",
+      "reshape_torch()\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 36%|███▌      | 5/14 [00:07<00:13,  1.55s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "read_sentinel_img_trio()\n",
+      "reshape_torch()\n",
+      "reshape_torch()\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 43%|████▎     | 6/14 [00:09<00:12,  1.58s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "read_sentinel_img_trio()\n",
+      "reshape_torch()\n",
+      "reshape_torch()\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 50%|█████     | 7/14 [00:13<00:16,  2.30s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "read_sentinel_img_trio()\n",
+      "reshape_torch()\n",
+      "reshape_torch()\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 57%|█████▋    | 8/14 [00:24<00:29,  4.98s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "read_sentinel_img_trio()\n",
+      "reshape_torch()\n",
+      "reshape_torch()\n",
+      "read_sentinel_img_trio()\n",
+      "reshape_torch()\n",
+      "reshape_torch()\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 71%|███████▏  | 10/14 [01:03<00:49, 12.34s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "read_sentinel_img_trio()\n",
+      "reshape_torch()\n",
+      "reshape_torch()\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 79%|███████▊  | 11/14 [01:12<00:33, 11.17s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "read_sentinel_img_trio()\n",
+      "reshape_torch()\n",
+      "reshape_torch()\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 86%|████████▌ | 12/14 [01:21<00:21, 10.52s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "read_sentinel_img_trio()\n",
+      "reshape_torch()\n",
+      "reshape_torch()\n",
+      "read_sentinel_img_trio()\n",
+      "reshape_torch()\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 93%|█████████▎| 13/14 [02:03<00:19, 19.99s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "reshape_torch()\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 14/14 [02:08<00:00,  9.19s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "read_sentinel_img_trio()\n",
+      "reshape_torch()\n",
+      "reshape_torch()\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -356,9 +568,7 @@
     "if IS_COLAB: # don't forget to activate GPU in Google Colab\n",
     "    weights = torch.FloatTensor(train_dataset.weights).cuda()\n",
     "else:\n",
-    "    weights = torch.FloatTensor(train_dataset.weights)\n",
-    "    \n",
-    "print(weights)"
+    "    weights = torch.FloatTensor(train_dataset.weights)\n"
    ]
   },
   {
@@ -366,7 +576,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(weights)"
+   ]
   }
  ],
  "metadata": {
