--- a/dataset/dataset-utl.ipynb
+++ b/dataset/dataset-utl.ipynb
@@ -73,7 +73,6 @@
     "    p0 = max(0, shape[0] - shape_img[0])\n",
     "    p1 = max(0, shape[1] - shape_img[1])\n",
     "    \n",
-    "    print(\"adjust_shape_img()\")\n",
     "    return np.pad(I, ((0, p0), (0, p1)), 'edge')"
    ]
   },
@@ -197,8 +196,8 @@
     "    ir3 = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_IR_3_20m), 2), shape)\n",
     "    ir4 = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_IR_4_20m), 2), shape)\n",
     "    \n",
-    "    swir1 = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_SWIR_1_20m), 2), s)\n",
-    "    swir2 = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_SWIR_2_20m), 2), s)\n",
+    "    swir1 = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_SWIR_1_20m), 2), shape)\n",
+    "    swir2 = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_SWIR_2_20m), 2), shape)\n",
     "    \n",
     "    I = np.stack((red, green, blue, nir, ir1, ir2, ir3, ir4, swir1, swir2), axis=2).astype('float')\n",
     "    \n",
@@ -238,12 +237,12 @@
     "    ir3 = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_IR_3_20m), 2), shape)\n",
     "    ir4 = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_IR_4_20m), 2), shape)\n",
     "    \n",
-    "    swir1 = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_SWIR_1_20m), 2), s)\n",
-    "    swir2 = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_SWIR_2_20m), 2), s)\n",
+    "    swir1 = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_SWIR_1_20m), 2), shape)\n",
+    "    swir2 = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_SWIR_2_20m), 2), shape)\n",
     "    \n",
-    "    uv  = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_AEROSOL_60m), 6), s)\n",
-    "    wv  = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_WATER_VAPOR_60m), 6), s)\n",
-    "    cir = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_CIRRUS_60m), 6), s)\n",
+    "    uv  = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_AEROSOL_60m), 6), shape)\n",
+    "    wv  = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_WATER_VAPOR_60m), 6), shape)\n",
+    "    cir = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_CIRRUS_60m), 6), shape)\n",
     "    \n",
     "    \n",
     "    I = np.stack((red, green, blue, nir, ir1, ir2, ir3, ir4, swir1, swir2, uv, wv, cir), axis=2).astype('float')\n",
@@ -251,7 +250,8 @@
     "    if NORMALISE_IMGS:\n",
     "        I = (I - I.mean()) / I.std()\n",
     "    \n",
-    "    print(\"read_sentinel_img_60()\")"
+    "    print(\"read_sentinel_img_60()\")\n",
+    "    return I"
    ]
   },
   {
@@ -263,16 +263,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "# TO-DO: test this function\n",
-    "def read_sentinel_img(path):\n",
-    "    \"\"\"Read cropped Sentinel-2 images: all bands\"\"\"\n",
+    "\"\"\"def read_sentinel_img(path):\n",
+    "    Read cropped Sentinel-2 images: all bands\n",
     "    \n",
     "    img_name = os.listdir(path)[0][:-7]   \n",
     "    I = np.ones(0) # initialization needed?\n",
+    "    shape = 0\n",
     "    \n",
     "    if BAND_TYPE == (1|2|3|4):\n",
     "        red   = io.imread(path + img_name + SENTINEL_RED_10m)\n",
@@ -283,12 +284,11 @@
     "    \n",
     "    if BAND_TYPE == (2|3|4):\n",
     "        nir   = io.imread(path + img_name + SENTINEL_NIR_10m)\n",
-    "        shape = red.shape\n",
     "        if(BAND_TYPE == 2):\n",
     "            I = np.stack((red, green, blue, nir), axis=2).astype('float')\n",
     "    \n",
     "    if BAND_TYPE == (3|4):\n",
-    "        print(\"3|4\")\n",
+    "        shape = red.shape\n",
     "        ir1   = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_IR_1_20m), 2), shape)\n",
     "        ir2   = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_IR_2_20m), 2), shape)\n",
     "        ir3   = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_IR_3_20m), 2), shape)\n",
@@ -299,9 +299,9 @@
     "            I = np.stack((red, green, blue, nir, ir1, ir2, ir3, ir4, swir1, swir2), axis=2).astype('float')\n",
     "        \n",
     "    if BAND_TYPE == 4:\n",
-    "        uv  = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_AEROSOL_60m), 6), s)\n",
-    "        wv  = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_WATER_VAPOR_60m), 6), s)\n",
-    "        cir = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_CIRRUS_60m), 6), s)\n",
+    "        uv  = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_AEROSOL_60m), 6), shape)\n",
+    "        wv  = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_WATER_VAPOR_60m), 6), shape)\n",
+    "        cir = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_CIRRUS_60m), 6), shape)\n",
     "        \n",
     "        I = np.stack((red, green, blue, nir, ir1, ir2, ir3, ir4, swir1, swir2, uv, wv, cir), axis=2).astype('float')\n",
     "    \n",
@@ -309,6 +309,49 @@
     "        I = (I - I.mean()) / I.std()\n",
     "    \n",
     "    print(\"read_sentinel_img()\")\n",
+    "    return I\n",
+    "\"\"\"\n",
+    "    \n",
+    "def read_sentinel_img(path):\n",
+    "    \"\"\"Read cropped Sentinel-2 images: all bands\"\"\"\n",
+    "    \n",
+    "    img_name = os.listdir(path)[0][:-7]   \n",
+    "    I = np.ones(0) # initialization needed?\n",
+    "    \n",
+    "    # BAND_TYPE = 1|2|3|4\n",
+    "    red   = io.imread(path + img_name + SENTINEL_RED_10m)\n",
+    "    green = io.imread(path + img_name + SENTINEL_GREEN_10m)\n",
+    "    blue  = io.imread(path + img_name + SENTINEL_BLUE_10m)\n",
+    "    \n",
+    "    shape = red.shape\n",
+    "    \n",
+    "    nir   = io.imread(path + img_name + SENTINEL_NIR_10m)\n",
+    "    \n",
+    "    ir1   = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_IR_1_20m), 2), shape)\n",
+    "    ir2   = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_IR_2_20m), 2), shape)\n",
+    "    ir3   = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_IR_3_20m), 2), shape)\n",
+    "    ir4   = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_IR_4_20m), 2), shape)\n",
+    "    swir1 = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_SWIR_1_20m), 2), shape)\n",
+    "    swir2 = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_SWIR_2_20m), 2), shape)\n",
+    "    \n",
+    "    uv  = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_AEROSOL_60m), 6), shape)\n",
+    "    wv  = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_WATER_VAPOR_60m), 6), shape)\n",
+    "    cir = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_CIRRUS_60m), 6), shape)\n",
+    "    \n",
+    "    if BAND_TYPE == 1:\n",
+    "        I = np.stack((red, green, blue), axis=2).astype('float') \n",
+    "    elif BAND_TYPE == 2:\n",
+    "        I = np.stack((red, green, blue, nir), axis=2).astype('float')    \n",
+    "    elif BAND_TYPE == 3:\n",
+    "        I = np.stack((red, green, blue, nir, ir1, ir2, ir3, ir4, swir1, swir2), axis=2).astype('float')\n",
+    "    elif BAND_TYPE == 4:\n",
+    "        I = np.stack((red, green, blue, nir, ir1, ir2, ir3, ir4, swir1, swir2, uv, wv, cir), axis=2).astype('float')\n",
+    "    else:\n",
+    "        I = np.stack((red, green, blue, nir, ir1, ir2, ir3, ir4, swir1, swir2, uv, wv, cir), axis=2).astype('float')\n",
+    "        \n",
+    "    if NORMALISE_IMGS:\n",
+    "        I = (I - I.mean()) / I.std()\n",
+    "\n",
     "    return I"
    ]
   },
@@ -321,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,6 +377,8 @@
     "    # BAND_TYPE is defined globally\n",
     "    I1 = read_sentinel_img(path + IMG_1)\n",
     "    I2 = read_sentinel_img(path + IMG_2)\n",
+    "    #I1 = read_sentinel_img_60(path + IMG_1)\n",
+    "    #I2 = read_sentinel_img_60(path + IMG_2)\n",
     "    \n",
     "    cm = io.imread(path + IMG_CM, as_gray=True) != 0\n",
     "    \n",
@@ -378,7 +423,7 @@
     "    \n",
     "    I_t = I.transpose((2, 0, 1))\n",
     "    \n",
-    "    print(\"reshape_torch()\")\n",
+    "    # print(\"reshape_torch()\")\n",
     "    return torch.from_numpy(I_t)"
    ]
   },
@@ -391,14 +436,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "class ChangeDetectionDataset\n"
+     "ename": "NameError",
+     "evalue": "name 'PATCH_SIDE' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-15-43bf1d71eb88>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mclass\u001b[0m \u001b[0mChangeDetectionDataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0;34m\"\"\"Change Detection dataset class. For training and testing data\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpatch_side\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mPATCH_SIDE\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstride\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0muse_all_bands\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtransform\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \"\"\"\n",
+      "\u001b[0;32m<ipython-input-15-43bf1d71eb88>\u001b[0m in \u001b[0;36mChangeDetectionDataset\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0;34m\"\"\"Change Detection dataset class. For training and testing data\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpatch_side\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mPATCH_SIDE\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstride\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0muse_all_bands\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtransform\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m         \"\"\"\n\u001b[1;32m      6\u001b[0m         \u001b[0mArgs\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'PATCH_SIDE' is not defined"
      ]
     }
    ],
@@ -442,7 +492,7 @@
     "        self.n_patches = 0\n",
     "        self.patch_coords = []\n",
     "        \n",
-    "        for img_name in tqdm(self.names): # tqdm derives from the Arabic word taqaddum (تقدّم) which can mean \"progress,\" and is an abbreviation for \"I love you so much\" in Spanish (te quiero demasiado).\n",
+    "        for img_name in tqdm(self.names):\n",
     "            # load and store each image\n",
     "            I1, I2, cm = read_sentinel_img_trio(self.path + img_name)\n",
     "            self.imgs_1[img_name] = reshape_torch(I1)\n",
