deleting redundant functions in dataset

--- a/dataset/dataset-utl.ipynb
+++ b/dataset/dataset-utl.ipynb
@@ -102,70 +102,7 @@
     "\n",
     "```numpy.std(arr, axis = None)```\n",
     "\n",
-    "Compute the standard deviation of the given data (array elements) along the specified axis. Standard deviation is measured as the spread of data distribution in the given data set.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def read_sentinel_img_10(path):\n",
-    "    \"\"\"Read cropped Sentinel-2 images: RGB bands\"\"\"\n",
-    "    \n",
-    "    img_name = os.listdir(path)[0][:-7] # ?\n",
-    "    \n",
-    "    red   = io.imread(path + img_name + SENTINEL_RED_10m)\n",
-    "    green = io.imread(path + img_name + SENTINEL_GREEN_10m)\n",
-    "    blue  = io.imread(path + img_name + SENTINEL_BLUE_10m)\n",
-    "    \n",
-    "    I = np.stack((red, green, blue), axis=2).astype('float')\n",
-    "    \n",
-    "    if NORMALISE_IMGS:\n",
-    "        I = (I - I.mean()) / I.std() # I é torch?\n",
-    "    \n",
-    "    print(\"read_sentinel_img_10()\")\n",
-    "    return I"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Leitura das imagens do Sentinel-2: bandas RGB + NIR (infravermelho próximo)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def read_sentinel_img_nir(path):\n",
-    "    \"\"\"Read cropped Sentinel-2 images: RGB bands + NIR\"\"\"\n",
-    "    \n",
-    "    img_name = os.listdir(path)[0][:-7]\n",
-    "    \n",
-    "    red   = io.imread(path + img_name + SENTINEL_RED_10m)\n",
-    "    green = io.imread(path + img_name + SENTINEL_GREEN_10m)\n",
-    "    blue  = io.imread(path + img_name + SENTINEL_BLUE_10m)\n",
-    "    nir   = io.imread(path + img_name + SENTINEL_NIR_10m)\n",
-    "    \n",
-    "    I = np.stack((red, green, blue, nir), axis=2).astype('float')\n",
-    "    \n",
-    "    if NORMALISE_IMGS:\n",
-    "        I = (I - I.mean()) / I.std()\n",
-    "    \n",
-    "    print(\"read_sentinel_img_nir()\")\n",
-    "    return I"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Leitura das imagens do Sentinel-2 para bandas com resolução menor ou igual a 20m.\n",
+    "Compute the standard deviation of the given data (array elements) along the specified axis. Standard deviation is measured as the spread of data distribution in the given data set.\n",
     "\n",
     "#### scipy.ndimage.zoom\n",
     "\n",
@@ -173,92 +110,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def read_sentinel_img_20(path):\n",
-    "    \"\"\"Read cropped Sentinel-2 images: bandas resolution \n",
-    "       less or equals to 20m\"\"\"\n",
-    "    \n",
-    "    img_name = os.listdir(path)[0][:-7]\n",
-    "    \n",
-    "    red   = io.imread(path + img_name + SENTINEL_RED_10m)\n",
-    "    green = io.imread(path + img_name + SENTINEL_GREEN_10m)\n",
-    "    blue  = io.imread(path + img_name + SENTINEL_BLUE_10m)\n",
-    "    nir   = io.imread(path + img_name + SENTINEL_NIR_10m)\n",
-    "    \n",
-    "    shape = red.shape\n",
-    "    \n",
-    "    ir1 = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_IR_1_20m), 2), shape)\n",
-    "    ir2 = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_IR_2_20m), 2), shape)\n",
-    "    ir3 = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_IR_3_20m), 2), shape)\n",
-    "    ir4 = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_IR_4_20m), 2), shape)\n",
-    "    \n",
-    "    swir1 = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_SWIR_1_20m), 2), shape)\n",
-    "    swir2 = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_SWIR_2_20m), 2), shape)\n",
-    "    \n",
-    "    I = np.stack((red, green, blue, nir, ir1, ir2, ir3, ir4, swir1, swir2), axis=2).astype('float')\n",
-    "    \n",
-    "    if NORMALISE_IMGS:\n",
-    "        I = (I - I.mean()) / I.std()\n",
-    "    \n",
-    "    print(\"read_sentinel_img_20()\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Leitura das imagens do Sentinel-2: todas as bandas."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def read_sentinel_img_60(path):\n",
-    "    \"\"\"Read cropped Sentinel-2 images: all bands\"\"\"\n",
-    "    \n",
-    "    img_name = os.listdir(path)[0][:-7]\n",
-    "    \n",
-    "    red   = io.imread(path + img_name + SENTINEL_RED_10m)\n",
-    "    green = io.imread(path + img_name + SENTINEL_GREEN_10m)\n",
-    "    blue  = io.imread(path + img_name + SENTINEL_BLUE_10m)\n",
-    "    nir   = io.imread(path + img_name + SENTINEL_NIR_10m)\n",
-    "    \n",
-    "    shape = red.shape\n",
-    "    \n",
-    "    ir1 = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_IR_1_20m), 2), shape)\n",
-    "    ir2 = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_IR_2_20m), 2), shape)\n",
-    "    ir3 = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_IR_3_20m), 2), shape)\n",
-    "    ir4 = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_IR_4_20m), 2), shape)\n",
-    "    \n",
-    "    swir1 = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_SWIR_1_20m), 2), shape)\n",
-    "    swir2 = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_SWIR_2_20m), 2), shape)\n",
-    "    \n",
-    "    uv  = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_AEROSOL_60m), 6), shape)\n",
-    "    wv  = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_WATER_VAPOR_60m), 6), shape)\n",
-    "    cir = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_CIRRUS_60m), 6), shape)\n",
-    "    \n",
-    "    \n",
-    "    I = np.stack((red, green, blue, nir, ir1, ir2, ir3, ir4, swir1, swir2, uv, wv, cir), axis=2).astype('float')\n",
-    "    \n",
-    "    if NORMALISE_IMGS:\n",
-    "        I = (I - I.mean()) / I.std()\n",
-    "    \n",
-    "    print(\"read_sentinel_img_60()\")\n",
-    "    return I"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Criação de uma função mais abrnagente que substitua as acima: AINDA NÃO TESTADA"
+    "Criação de uma função mais abrnagente que substitua as acima: (TESTADA)"
    ]
   },
   {
@@ -267,51 +122,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TO-DO: test this function\n",
-    "\"\"\"def read_sentinel_img(path):\n",
-    "    Read cropped Sentinel-2 images: all bands\n",
-    "    \n",
-    "    img_name = os.listdir(path)[0][:-7]   \n",
-    "    I = np.ones(0) # initialization needed?\n",
-    "    shape = 0\n",
-    "    \n",
-    "    if BAND_TYPE == (1|2|3|4):\n",
-    "        red   = io.imread(path + img_name + SENTINEL_RED_10m)\n",
-    "        green = io.imread(path + img_name + SENTINEL_GREEN_10m)\n",
-    "        blue  = io.imread(path + img_name + SENTINEL_BLUE_10m)\n",
-    "        if(BAND_TYPE == 1):\n",
-    "            I = np.stack((red, green, blue), axis=2).astype('float')\n",
-    "    \n",
-    "    if BAND_TYPE == (2|3|4):\n",
-    "        nir   = io.imread(path + img_name + SENTINEL_NIR_10m)\n",
-    "        if(BAND_TYPE == 2):\n",
-    "            I = np.stack((red, green, blue, nir), axis=2).astype('float')\n",
-    "    \n",
-    "    if BAND_TYPE == (3|4):\n",
-    "        shape = red.shape\n",
-    "        ir1   = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_IR_1_20m), 2), shape)\n",
-    "        ir2   = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_IR_2_20m), 2), shape)\n",
-    "        ir3   = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_IR_3_20m), 2), shape)\n",
-    "        ir4   = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_IR_4_20m), 2), shape)\n",
-    "        swir1 = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_SWIR_1_20m), 2), s)\n",
-    "        swir2 = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_SWIR_2_20m), 2), s)\n",
-    "        if(BAND_TYPE == 3):\n",
-    "            I = np.stack((red, green, blue, nir, ir1, ir2, ir3, ir4, swir1, swir2), axis=2).astype('float')\n",
-    "        \n",
-    "    if BAND_TYPE == 4:\n",
-    "        uv  = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_AEROSOL_60m), 6), shape)\n",
-    "        wv  = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_WATER_VAPOR_60m), 6), shape)\n",
-    "        cir = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_CIRRUS_60m), 6), shape)\n",
-    "        \n",
-    "        I = np.stack((red, green, blue, nir, ir1, ir2, ir3, ir4, swir1, swir2, uv, wv, cir), axis=2).astype('float')\n",
-    "    \n",
-    "    if NORMALISE_IMGS:\n",
-    "        I = (I - I.mean()) / I.std()\n",
-    "    \n",
-    "    print(\"read_sentinel_img()\")\n",
-    "    return I\n",
-    "\"\"\"\n",
-    "    \n",
     "def read_sentinel_img(path):\n",
     "    \"\"\"Read cropped Sentinel-2 images: all bands\"\"\"\n",
     "    \n",
@@ -372,13 +182,9 @@
     "    \"\"\"Read cropped Sentinel-2 image pairs and map of changes\"\"\"\n",
     "    \n",
     "    # read the images based on the types\n",
-    "    # it was tested with the other functions\n",
-    "    # TO-DO: test with read_sentinel_img\n",
     "    # BAND_TYPE is defined globally\n",
     "    I1 = read_sentinel_img(path + IMG_1)\n",
     "    I2 = read_sentinel_img(path + IMG_2)\n",
-    "    #I1 = read_sentinel_img_60(path + IMG_1)\n",
-    "    #I2 = read_sentinel_img_60(path + IMG_2)\n",
     "    \n",
     "    cm = io.imread(path + IMG_CM, as_gray=True) != 0\n",
     "    \n",
@@ -389,7 +195,6 @@
     "    # TO-DO: why just I2?\n",
     "    I2 = np.pad(I2, ((0, shape1[0] - shape2[0]), (0, shape1[1] - shape2[1]), (0, 0)), 'edge')\n",
     "    \n",
-    "    print(\"read_sentinel_img_trio()\")\n",
     "    return I1, I2, cm"
    ]
   },
@@ -423,7 +228,6 @@
     "    \n",
     "    I_t = I.transpose((2, 0, 1))\n",
     "    \n",
-    "    # print(\"reshape_torch()\")\n",
     "    return torch.from_numpy(I_t)"
    ]
   },
@@ -436,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -446,8 +250,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-15-43bf1d71eb88>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mclass\u001b[0m \u001b[0mChangeDetectionDataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0;34m\"\"\"Change Detection dataset class. For training and testing data\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpatch_side\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mPATCH_SIDE\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstride\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0muse_all_bands\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtransform\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \"\"\"\n",
-      "\u001b[0;32m<ipython-input-15-43bf1d71eb88>\u001b[0m in \u001b[0;36mChangeDetectionDataset\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0;34m\"\"\"Change Detection dataset class. For training and testing data\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpatch_side\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mPATCH_SIDE\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstride\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0muse_all_bands\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtransform\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m         \"\"\"\n\u001b[1;32m      6\u001b[0m         \u001b[0mArgs\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-24-4aa0b2c783d2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mclass\u001b[0m \u001b[0mChangeDetectionDataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0;34m\"\"\"Change Detection dataset class. For training and testing data\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpatch_side\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mPATCH_SIDE\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstride\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0muse_all_bands\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtransform\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \"\"\"\n",
+      "\u001b[0;32m<ipython-input-24-4aa0b2c783d2>\u001b[0m in \u001b[0;36mChangeDetectionDataset\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0;34m\"\"\"Change Detection dataset class. For training and testing data\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpatch_side\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mPATCH_SIDE\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstride\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0muse_all_bands\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtransform\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m         \"\"\"\n\u001b[1;32m      6\u001b[0m         \u001b[0mArgs\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mNameError\u001b[0m: name 'PATCH_SIDE' is not defined"
      ]
     }
